crates/daemon/tests/snapshots/cli_help__cli_help_snoozed.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List snoozed messages

Usage: mxr snoozed [OPTIONS]

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
