crates/daemon/tests/snapshots/cli_help__cli_help_spam.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Report message as spam

Usage: mxr spam [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
