crates/daemon/tests/snapshots/cli_help__cli_help_stale.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List stale threads waiting for a reply (mine = my turn, theirs = theirs)

Usage: mxr stale [OPTIONS]

Options:
      --mine
          Latest message in thread is inbound (I owe a reply). Default if neither flag set
      --theirs
          Latest message in thread is outbound (they owe a reply)
      --older-than-days <OLDER_THAN_DAYS>
          Threshold in days; threads with more recent activity are excluded [default: 14]
      --within-days <WITHIN_DAYS>
          Upper bound: threads idle for longer than this are also excluded (default ~1 year). Keeps the result actionable instead of surfacing decade-old archives. Set high to widen the window [default: 365]
      --limit <LIMIT>
          [default: 100]
      --account <ACCOUNT>
          
      --format <FORMAT>
          [possible values: table, json, jsonl, csv, ids]
  -h, --help
          Print help
