crates/daemon/tests/snapshots/cli_help__cli_help_star.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Star a message

Usage: mxr star [OPTIONS] [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
