crates/daemon/tests/snapshots/cli_help__cli_help_status.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show daemon status

Usage: mxr status [OPTIONS]

Options:
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
      --watch
      --freshness          Show how fresh the local mail is instead: when the newest message arrived, each account's sync health, and the last arrivals with the modes they went to
      --account <ACCOUNT>  With --freshness: one account (name, email or id). Default: every account, showing the freshest mail and the worst sync state
      --limit <LIMIT>      With --freshness: how many arrivals to list (default 5, at most 50)
  -h, --help               Print help
