crates/daemon/tests/snapshots/cli_help__cli_help_suggest_recipients.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Suggest "maybe include" Cc recipients for a draft. Excludes addresses already on the draft and never reveals Bcc'd addresses from prior threads

Usage: mxr suggest-recipients [OPTIONS]

Options:
      --draft <DRAFT>      Stored draft id. Mutually exclusive with --subject
      --subject <SUBJECT>  Subject for an ephemeral draft. Pair with --body-stdin for the body
      --body-stdin         Read the body from stdin
      --account <ACCOUNT>
      --limit <LIMIT>      [default: 5]
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
