crates/daemon/tests/snapshots/cli_help__cli_help_sync.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Trigger or query sync. Triggering blocks until the daemon finishes the sync, however long that takes

Usage: mxr sync [OPTIONS]

Options:
      --account <ACCOUNT>

      --status

      --wait
          Also wait for the account to report quiescent, and print the resulting status in JSON mode
      --wait-timeout-secs <WAIT_TIMEOUT_SECS>
          Maximum seconds --wait spends waiting for quiescence; does not bound the sync itself. Default 60 [default: 60]
      --format <FORMAT>
          Output format. Honored by `--status`; ignored by trigger mode today [possible values: table, json, jsonl, csv, ids]
  -h, --help
          Print help
