crates/daemon/tests/snapshots/cli_help__cli_help_thread.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Display a thread. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY` (deduplicated by thread)

Usage: mxr thread [OPTIONS] [THREAD_ID]

Arguments:
  [THREAD_ID]

Options:
      --search <SEARCH>
      --first
      --limit <LIMIT>
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
